2004-05-19  lav

	* undo.h, undo.cc: (GroupHead) new class; save block positions there.
	* kern.cc: clear undo when emptying text buffer.
	* mainmenu.cc: leave bare minimum - the menu is loaded from file.

2004-05-18  lav

	* chset.cc: display character in mb_mode properly - convert it to mb;
	  display unprintable 0x80 as '.'.
	* edit.cc, screen.cc: fix compile without mb chars.
	* getstr.cc, options.cc: use custom mb_len instead of mblen.
	* mb.cc, mb.h: add mb_len function; rename static variables.
	* window.cc: fix compile without mb chars; check mb_mode.

2004-05-12  lav

	* format.cc: add "no undo" phrase only if undo is disabled.

2004-05-06  lav

	* edit.cc: use UserReplaceChar.
	* kern.cc: use low level ReplaceBlock if undo is enabled; allow replace
	  if new block extends file; re-do ReplaceCharMove.
	* keymap.cc: undo-options; initialize shift in PrettyCodeScore properly.
	* keymap.h: UNDO_OPTIONS.
	* keymapdf.cc: add redo.
	* keymapfn.cc: add undo-step and redo-step.
	* options.cc, options.h: add undo options; fix number label positioning.
	* undo.cc, undo.h: (UndoOne, RedoOne, Change::Join, Clear) new methods.
	* user.cc, user.h: (UserUndoStep, UserRedoStep, UserReplaceChar) new functions.

2004-05-05  lav

	* Makefile.am: (undo.cc, undo.h) new files.
	* edit.cc, kern.cc, user.cc, user.h: add undo support.
	* keymap.cc, keymap.h, keymapfn.cc, keymapdf.cc: add undo/redo actions.

2004-04-29  lav

	* chset.cc: (choose_wch) new function to choose a wide char.
	* edit.h: add prototype.
	* keymap.cc, keymap.h, keymapfn.cc: add choose-wide-character action.
	* user.cc, user.h: (UserChooseWChar) new function.
	* window.cc, window.h: (PutWCh) new function to show single wide char.

2004-04-12  lav

	* block.cc: (WCharAtLC) new function.
	* chset.cc: fix for non-printable wchars in 0-255 range.
	* edit.cc: include langinfo.h.
	* edit.h: new prototypes.
	* ext.cc: (ReplaceWCharExt, ReplaceWCharExtMove) new functions.
	* frames.cc: drawing with unicode chars.