@@ -136,6 +136,7 @@ enum  Action
    TEXT_OPTIMIZE,
    CHOOSE_CHAR,
    CHOOSE_WCHAR,
+   CHOOSE_BYTE,
    UNIX_DOS_TRANSFORM,
 
 // Options
@@ -152,6 +153,7 @@ enum  Action
    ENTER_CONTROL_CHAR,
    ENTER_CHAR_CODE,
    ENTER_WCHAR_CODE,
+   ENTER_BYTE_CODE,
 
    WINDOW_RESIZE,
 
